--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -189,7 +189,6 @@
     </Compile>
     <Compile Include="Membership\CodeFirstMembershipProvider.cs" />
     <Compile Include="Membership\CodeFirstRoleProvider.cs" />
-    <Compile Include="Membership\Crypto.cs" />
     <Compile Include="Membership\WebSecurity.cs" />
     <Compile Include="Models\AccountModels.cs" />
     <Compile Include="Models\HomeInputModel.cs" />
@@ -274,6 +273,10 @@
     <ProjectReference Include="..\Data\Data.csproj">
       <Project>{5d9a921a-ccb9-4012-a610-6aa232d24d3a}</Project>
       <Name>Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Domain\Domain.csproj">
+      <Project>{9c301a9b-745a-4879-bd58-8e3a2c11812b}</Project>
+      <Name>Domain</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
