added csv support and initial admin

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -285,6 +285,7 @@
   <ItemGroup>
     <Content Include="Views\shared\_html5shiv.cshtml" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
